resolve data display error

--- a/reglist.html
+++ b/reglist.html
@@ -73,10 +73,10 @@
     function addRow(data) {
       const row = document.createElement('tr');
       row.innerHTML = `
-        <td>${data.FirstName || ''}</td>
-        <td>${data.LastName || ''}</td>
-        <td>${data.Phone || ''}</td>
-        <td>${data.Email || ''}</td>
+        <td>${data.firstName || ''}</td>
+        <td>${data.lastName || ''}</td>
+        <td>${data.phone || ''}</td>
+        <td>${data.email || ''}</td>
       `;
       regBody.appendChild(row);
     }
@@ -95,7 +95,9 @@
     function exportToCSV() {
       let csv = "First Name,Last Name,Phone,Email\n";
       allData.forEach(item => {
-        csv += `"${item.FirstName || ''}","${item.LastName || ''}","${item.Phone || ''}","${item.Email || ''}"\n`;
+
+        csv += `"${item.firstName || ''}","${item.lastName || ''}","${item.phone || ''}","${item.email || ''}"\n`;
+
       });
       const blob = new Blob([csv], { type: "text/csv;charset=utf-8;" });
       const link = document.createElement("a");
