--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     .hero {
       text-align: center;
       padding: 80px 20px 40px;
-      background-image: url('images/poster.png');
+      background-image: url('images/ekinform.png');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
