--- a/index.html
+++ b/index.html
@@ -7,46 +7,68 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
 
+  <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/10.12.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.1/firebase-firestore-compat.js"></script>
 
   <style>
     body {
-      background: linear-gradient(to right, #1e1e2f, #2c3e50);
+      margin: 0;
+      background: #1e1e2f;
       color: white;
       font-family: 'Segoe UI', sans-serif;
       scroll-behavior: smooth;
     }
-    .hero {
-      text-align: center;
-      padding: 80px 20px 40px;
-      background-image: url('images/ekinform2.jpg');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
+
+    .poster-hero {
+      position: relative;
+      height: 100vh;
+      background-color: black;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
     }
-    @media (min-width: 768px) {
-      .hero {
-        background-image: url('images/posterd.png');
-      }
+
+    .poster-img {
+      max-height: 100%;
+      max-width: 100%;
+      object-fit: contain;
+      border-radius: 8px;
+      box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
     }
-    .overlay {
-      background-color: rgba(0, 0, 0, 0.6);
-      padding: 40px;
-      border-radius: 10px;
+
+    .scroll-btn {
+      position: absolute;
+      bottom: 20px;
+      background-color: rgba(255, 255, 255, 0.7);
+      color: #000;
+      border: none;
+      border-radius: 20px;
+      padding: 8px 20px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: transform 0.3s;
     }
+
+    .scroll-btn:hover {
+      transform: scale(1.1);
+    }
+
     .form-section {
       padding: 20px;
-      animation: fadeIn 1s ease-in;
     }
+
     .btn-warning {
       font-weight: bold;
       transition: background 0.3s, transform 0.2s;
     }
+
     .btn-warning:hover {
       background: #ffc107;
       transform: scale(1.05);
     }
+
     .disclaimer-box {
       background-color: #ffffff;
       color: #000000;
@@ -59,12 +81,16 @@
   </style>
 </head>
 <body>
-  <div class="hero">
 
+  <!-- Poster Section -->
+  <div id="posterSection" class="poster-hero">
+    <img src="images/ekinform.jpg" alt="演唱會海報" class="poster-img">
+    <button class="scroll-btn" onclick="scrollToForm()">⬆️ 開始報名</button>
   </div>
 
-  <div class="container mt-4">
-    <div id="formSection" class="form-section animate__animated animate__fadeIn">
+  <!-- Main Content Section (Hidden at first) -->
+  <div id="mainContent" class="container mt-4 animate__animated" style="display: none;">
+    <div class="form-section animate__animated animate__fadeIn">
       <p>
         <a class="btn btn-outline-light btn-sm mb-3" data-bs-toggle="collapse" href="#eventDetails" role="button" aria-expanded="false" aria-controls="eventDetails">
           👉 查看抽獎活動詳情
@@ -81,6 +107,7 @@
           </ul>
         </div>
       </div>
+      <hr />
 
       <form id="drawForm">
         <div class="row">
@@ -121,21 +148,6 @@
     </div>
   </div>
 
-  <!-- Poster Modal -->
-  <div class="modal fade" id="posterModal" tabindex="-1" aria-labelledby="posterModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-dialog-centered">
-      <div class="modal-content bg-dark">
-        <div class="modal-header border-0">
-          <h5 class="modal-title text-white" id="posterModalLabel">官方演唱會海報</h5>
-          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="關閉"></button>
-        </div>
-        <div class="modal-body text-center">
-          <img src="images/poster2.png" alt="鄭伊健海報" class="img-fluid rounded shadow">
-        </div>
-      </div>
-    </div>
-  </div>
-
   <!-- Disclaimer Modal -->
   <div class="modal fade" id="disclaimerModal" tabindex="-1" aria-labelledby="disclaimerModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg modal-dialog-centered">
@@ -161,7 +173,7 @@
     </div>
   </div>
 
-  <!-- Firebase Script -->
+  <!-- Firebase + Scroll Script -->
   <script>
     const firebaseConfig = {
       apiKey: "AIzaSyB6-I9oj4hti5rsxN-dMZQdzeoXTsKX0Xg",
@@ -201,9 +213,15 @@
         alert("提交失敗，請稍後再試。");
       }
     });
+
+    function scrollToForm() {
+      document.getElementById('posterSection').style.display = 'none';
+      const mainContent = document.getElementById('mainContent');
+      mainContent.style.display = 'block';
+      mainContent.classList.add('animate__fadeInUp');
+    }
   </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
