--- a/index.html
+++ b/index.html
@@ -54,17 +54,31 @@
     }
 
     .arrow-down {
-      font-size: 2.5rem;
-      color: white;
-      margin-bottom: 120px;
-      animation: bounce 1.5s infinite;
       cursor: pointer;
+      margin-bottom: 120px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       z-index: 2;
     }
 
-    @keyframes bounce {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
+    .chevron {
+      width: 24px;
+      height: 24px;
+      border-right: 4px solid white;
+      border-top: 4px solid white;
+      transform: rotate(-45deg);
+      margin: 6px;
+      animation: bounceChevron 1.2s infinite;
+    }
+
+    .chevron:nth-child(2) {
+      animation-delay: 0.2s;
+    }
+
+    @keyframes bounceChevron {
+      0%, 100% { transform: rotate(-45deg) translateY(0); }
+      50%      { transform: rotate(-45deg) translateY(-8px); }
     }
 
     .form-container {
@@ -117,9 +131,12 @@
 </head>
 <body>
 
-  <!-- Arrow Only Section -->
+  <!-- Animated Chevron Arrow Section -->
   <div class="arrow-section">
-    <div class="arrow-down" onclick="revealForm()">⬆</div>
+    <div class="arrow-down" onclick="revealForm()">
+      <div class="chevron"></div>
+      <div class="chevron"></div>
+    </div>
   </div>
 
   <!-- Sliding Form Section -->
@@ -250,8 +267,7 @@
 
     function revealForm() {
       document.querySelector('.arrow-section').style.display = 'none';
-      const formContainer = document.getElementById('formContainer');
-      formContainer.classList.add('form-slide-top');
+      document.getElementById('formContainer').classList.add('form-slide-top');
     }
   </script>
 
