change arrow space

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       border-right: 4px solid white;
       border-top: 4px solid white;
       transform: rotate(-45deg);
-      margin: 6px;
+      margin: 2px; /* reduced spacing */
       animation: bounceChevron 1.2s infinite;
     }
 
@@ -78,7 +78,7 @@
 
     @keyframes bounceChevron {
       0%, 100% { transform: rotate(-45deg) translateY(0); }
-      50%      { transform: rotate(-45deg) translateY(-8px); }
+      50%      { transform: rotate(-45deg) translateY(-6px); }
     }
 
     .form-container {
