--- a/index.html
+++ b/index.html
@@ -61,15 +61,14 @@
     }
 
     .chevron {
-      width: 24px;
+      width: 40px;
       height: 24px;
-      border-right: 4px solid white;
-      border-top: 4px solid white;
+      border-right: 6px solid white;
+      border-top: 6px solid white;
       transform: rotate(-45deg);
-      margin: 2px;
+      margin: 3px;
       animation: bounceChevron 1.2s infinite;
     }
-
     .chevron:nth-child(2) {
       animation-delay: 0.2s;
     }
@@ -81,7 +80,7 @@
 
     .form-container {
       position: fixed;
-      top: calc(100vh - 260px); /* Reveal top 100px */
+      top: calc(100vh - 260px); 
       left: 0;
       width: 100%;
       z-index: 3;
