--- a/index.html
+++ b/index.html
@@ -65,10 +65,11 @@
       height: 20px;
       border-right: 4px solid white;
       border-top: 4px solid white;
-      transform: rotate(-45deg);
-      margin: 2px;
+      transform: rotate(-45deg) scaleY(0.6);
+      margin: 1px;
       animation: bounceChevron 1.2s infinite;
     }
+
     .chevron:nth-child(2) {
       animation-delay: 0.2s;
     }
