--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
   <!-- Form -->
   <div id="formContainer" class="form-container container">
     <div class="form-section">
+      <h5 class="mb-4 text-white">請填寫以下表格</h5>
       <p>
         <a class="btn btn-outline-light btn-sm mb-3" data-bs-toggle="collapse" href="#eventDetails" role="button">
           👉 查看抽獎活動詳情
