--- a/index.html
+++ b/index.html
@@ -125,7 +125,9 @@
   <!-- Form -->
   <div id="formContainer" class="form-container container">
     <div class="form-section">
-      <h5 class="mb-4 text-white">請填寫以下表格</h5>
+      <div class="text-center text-white animate__animated animate__fadeInDown" style="font-size: 0.9rem; margin-top: 20px;">
+        開啟表格填寫
+      </div>
       <p>
         <a class="btn btn-outline-light btn-sm mb-3" data-bs-toggle="collapse" href="#eventDetails" role="button">
           👉 查看抽獎活動詳情
