--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     .arrow-down {
       cursor: pointer;
-      margin-bottom: 80px;
+      margin-bottom: 60px;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -125,7 +125,7 @@
   <!-- Form -->
   <div id="formContainer" class="form-container container">
     <div class="form-section">
-      <div class="text-center text-white animate__animated animate__fadeInDown" style="font-size: 0.9rem; margin-top: 0px;">
+      <div class="text-center" style="font-size: 0.9rem; margin-top: 0px;">
         開啟表格填寫
       </div>
       <p>
