--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     .arrow-down {
       cursor: pointer;
-      margin-bottom: 60px;
+      margin-bottom: 70px;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -125,8 +125,8 @@
   <!-- Form -->
   <div id="formContainer" class="form-container container">
     <div class="form-section">
-      <div class="text-center" style="font-size: 0.9rem; margin-top: 0px;">
-        開啟表格填寫
+      <div class="text-center text-white" style="font-size: 0.9rem; margin-top: 5px; margin-bottom: 4px;">
+        請按箭頭開啟表格填寫
       </div>
       <p>
         <a class="btn btn-outline-light btn-sm mb-3" data-bs-toggle="collapse" href="#eventDetails" role="button">
